--- a/src/Project Folder/Settings/imgui.ini
+++ b/src/Project Folder/Settings/imgui.ini
@@ -4,16 +4,15 @@ Size=656,444
 Collapsed=0
 
 [Window][Configuration]
-Pos=1348,59
-Size=572,958
+ViewportPos=528,-4
+ViewportId=0x169CEE22
+Size=367,1034
 Collapsed=0
-DockId=0x00000005,1
 
 [Window][Console]
-Pos=242,761
-Size=1104,256
+Pos=1433,733
+Size=476,276
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][ButtonsNavBar]
 Pos=0,19
@@ -29,7 +28,7 @@ Collapsed=0
 Pos=1348,59
 Size=572,958
 Collapsed=0
-DockId=0x00000005,2
+DockId=0x8B93E3BD,2
 
 [Window][Main Window]
 Pos=0,51
@@ -47,34 +46,33 @@ Size=1920,958
 Collapsed=0
 
 [Window][Inspector]
-Pos=1348,59
-Size=572,958
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Hierarchy]
-Pos=0,59
-Size=240,470
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Scene]
-Pos=242,59
-Size=1104,700
+Pos=1606,71
+Size=304,231
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Assets]
-Pos=0,531
-Size=240,486
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Game]
-Pos=242,59
-Size=1104,700
+[Window][Hierarchy]
+Pos=1606,71
+Size=304,231
 Collapsed=0
 DockId=0x00000002,1
+
+[Window][Scene]
+ViewportPos=870,153
+ViewportId=0x18B8C0DE
+Size=1328,700
+Collapsed=0
+
+[Window][Assets]
+Pos=5,67
+Size=240,486
+Collapsed=0
+
+[Window][Game]
+Pos=491,135
+Size=118,470
+Collapsed=0
+DockId=0x00000003,0
 
 [Window][Time Settings]
 Pos=1295,742
@@ -82,19 +80,13 @@ Size=301,182
 Collapsed=0
 
 [Window][Text Editor]
-Pos=1348,59
-Size=572,958
+Pos=1583,315
+Size=329,155
 Collapsed=0
-DockId=0x00000005,3
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,82 Size=1920,958 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=240,958 Split=Y Selected=0x7E7D78B8
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=275,470 Selected=0x788BAA0D
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=275,486 Selected=0x7E7D78B8
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1678,958 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1104,966 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1261,700 CentralNode=1 Selected=0x18B8C0DE
-      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=1261,256 Selected=0xF9BEF62A
-    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=572,966 Selected=0xF02CD328
+DockNode    ID=0x00000004 Pos=1606,94 Size=304,231 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=120,470 Selected=0x788BAA0D
+  DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=118,470 Selected=0x83199EB2
+DockSpace   ID=0x8B93E3BD Pos=0,82 Size=1920,958 CentralNode=1
 
