--- a/src/Project Folder/Settings/imgui.ini
+++ b/src/Project Folder/Settings/imgui.ini
@@ -16,7 +16,7 @@ Collapsed=0
 
 [Window][ButtonsNavBar]
 Pos=0,19
-Size=1536,40
+Size=1920,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -49,13 +49,13 @@ Collapsed=0
 Pos=1606,71
 Size=304,231
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000002,1
 
 [Window][Hierarchy]
 Pos=1606,71
 Size=304,231
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000002,0
 
 [Window][Scene]
 ViewportPos=870,153
@@ -80,13 +80,13 @@ Size=301,182
 Collapsed=0
 
 [Window][Text Editor]
-Pos=1583,315
-Size=329,155
+Pos=964,170
+Size=758,588
 Collapsed=0
 
 [Docking][Data]
 DockNode    ID=0x00000004 Pos=1606,94 Size=304,231 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=120,470 Selected=0x788BAA0D
+  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=120,470 Selected=0xF02CD328
   DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=118,470 Selected=0x83199EB2
 DockSpace   ID=0x8B93E3BD Pos=0,82 Size=1920,958 CentralNode=1
 
