--- a/src/Project Folder/Settings/imgui.ini
+++ b/src/Project Folder/Settings/imgui.ini
@@ -46,10 +46,9 @@ Size=1920,958
 Collapsed=0
 
 [Window][Inspector]
-Pos=1606,71
-Size=304,231
+Pos=1425,274
+Size=440,550
 Collapsed=0
-DockId=0x00000002,1
 
 [Window][Hierarchy]
 Pos=1606,71
@@ -86,7 +85,7 @@ Collapsed=0
 
 [Docking][Data]
 DockNode    ID=0x00000004 Pos=1606,94 Size=304,231 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=120,470 Selected=0xF02CD328
+  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=120,470 Selected=0x788BAA0D
   DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=118,470 Selected=0x83199EB2
 DockSpace   ID=0x8B93E3BD Pos=0,82 Size=1920,958 CentralNode=1
 
