--- a/src/Diamond Engine.vcxproj.filters
+++ b/src/Diamond Engine.vcxproj.filters
@@ -25,15 +25,6 @@
     <Filter Include="Sources\Tools\MMath">
       <UniqueIdentifier>{df17df8b-ee01-4043-8b01-4df44a76c89d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Sources\Editor">
-      <UniqueIdentifier>{75a56bd2-2f1a-414c-a33f-34ff4b8dd012}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Sources\Editor\Windows">
-      <UniqueIdentifier>{42c4372c-1c8f-42f2-b33a-54b02dd58a09}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Sources\Editor\Windows\Base">
-      <UniqueIdentifier>{b095445e-5215-4de2-a6ef-15a348ff7cae}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Externals\MathGeoLib">
       <UniqueIdentifier>{ea1362cf-f0e8-4042-b766-f00c500c6979}</UniqueIdentifier>
     </Filter>
@@ -67,9 +58,6 @@
     <Filter Include="Sources\Components\Base">
       <UniqueIdentifier>{9d72356e-e550-43e2-a87c-2575d9fac8fd}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Sources\Editor\Windows\Derived">
-      <UniqueIdentifier>{3ddf461c-663f-41e9-afb5-dba7922c1012}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Sources\Components\Derived">
       <UniqueIdentifier>{76379e01-ba21-4f85-a2ac-ca1926df69f2}</UniqueIdentifier>
     </Filter>
@@ -96,6 +84,18 @@
     </Filter>
     <Filter Include="Sources\Tools\MMath\MMM_Procedural">
       <UniqueIdentifier>{f3a4d34a-882b-4e38-87d9-78235694d532}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\UIElements">
+      <UniqueIdentifier>{75a56bd2-2f1a-414c-a33f-34ff4b8dd012}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\UIElements\Windows">
+      <UniqueIdentifier>{42c4372c-1c8f-42f2-b33a-54b02dd58a09}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\UIElements\Windows\Base">
+      <UniqueIdentifier>{b095445e-5215-4de2-a6ef-15a348ff7cae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\UIElements\Windows\Derived">
+      <UniqueIdentifier>{3ddf461c-663f-41e9-afb5-dba7922c1012}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -154,7 +154,7 @@
       <Filter>Sources\Tools</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\Window.h">
-      <Filter>Sources\Editor\Windows\Base</Filter>
+      <Filter>Sources\UIElements\Windows\Base</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\External Libraries\MathGeoLib\include\MathBuildConfig.h">
       <Filter>Externals\MathGeoLib</Filter>
@@ -454,22 +454,22 @@
       <Filter>Sources\Resources</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_Scene.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_Inspector.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_Hierarchy.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_Console.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_Configuration.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_Assets.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\CO_Camera.h">
       <Filter>Sources\Components\Derived</Filter>
@@ -496,7 +496,7 @@
       <Filter>Externals\ImTextEditor</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\WI_TextEditor.h">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\External Libraries\PugiXML\pugiconfig.hpp">
       <Filter>Externals\PugiXML</Filter>
@@ -542,6 +542,9 @@
     </ClInclude>
     <ClInclude Include="Source Code\MO_GUI.h">
       <Filter>Sources\Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Code\UIElement.h">
+      <Filter>Sources\UIElements</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -591,7 +594,7 @@
       <Filter>Sources\Tools\MMath</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\Window.cpp">
-      <Filter>Sources\Editor\Windows\Base</Filter>
+      <Filter>Sources\UIElements\Windows\Base</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\External Libraries\MathGeoLib\include\Time\Clock.cpp">
       <Filter>Externals\MathGeoLib\Time</Filter>
@@ -768,22 +771,22 @@
       <Filter>Sources\Resources</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_Scene.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_Inspector.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_Hierarchy.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_Console.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_Configuration.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_Assets.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\CO_Camera.cpp">
       <Filter>Sources\Components\Derived</Filter>
@@ -807,7 +810,7 @@
       <Filter>Externals\ImTextEditor</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\WI_TextEditor.cpp">
-      <Filter>Sources\Editor\Windows\Derived</Filter>
+      <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\External Libraries\PugiXML\pugixml.cpp">
       <Filter>Externals\PugiXML</Filter>
@@ -847,6 +850,9 @@
     </ClCompile>
     <ClCompile Include="Source Code\MO_GUI.cpp">
       <Filter>Sources\Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Code\UIElement.cpp">
+      <Filter>Sources\UIElements</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
