--- a/src/Project Folder/Settings/imgui.ini
+++ b/src/Project Folder/Settings/imgui.ini
@@ -4,8 +4,7 @@ Size=656,444
 Collapsed=0
 
 [Window][Configuration]
-ViewportPos=528,-4
-ViewportId=0x169CEE22
+Pos=0,0
 Size=367,1034
 Collapsed=0
 
@@ -28,7 +27,6 @@ Collapsed=0
 Pos=1348,59
 Size=572,958
 Collapsed=0
-DockId=0x8B93E3BD,2
 
 [Window][Main Window]
 Pos=0,51
@@ -54,11 +52,9 @@ Collapsed=0
 Pos=1606,71
 Size=304,231
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Scene]
-ViewportPos=870,153
-ViewportId=0x18B8C0DE
+Pos=0,0
 Size=1328,700
 Collapsed=0
 
@@ -71,7 +67,6 @@ Collapsed=0
 Pos=491,135
 Size=118,470
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Time Settings]
 Pos=1295,742
@@ -82,10 +77,4 @@ Collapsed=0
 Pos=964,170
 Size=758,588
 Collapsed=0
-
-[Docking][Data]
-DockNode    ID=0x00000004 Pos=1606,94 Size=304,231 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=120,470 Selected=0x788BAA0D
-  DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=118,470 Selected=0x83199EB2
-DockSpace   ID=0x8B93E3BD Pos=0,82 Size=1920,958 CentralNode=1
 
