[CODE] ImGui UI fst

--- a/src/Project Folder/Settings/imgui.ini
+++ b/src/Project Folder/Settings/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=4,47
+Pos=41,58
 Size=656,444
 Collapsed=0
 
@@ -76,5 +76,20 @@ Collapsed=0
 [Window][Text Editor]
 Pos=964,170
 Size=758,588
+Collapsed=0
+
+[Window][Test1]
+Pos=0,115
+Size=219,579
+Collapsed=0
+
+[Window][Test2]
+Pos=1317,115
+Size=219,579
+Collapsed=0
+
+[Window][Test3]
+Pos=384,609
+Size=768,202
 Collapsed=0
 
