[CODE] I don't know if this is a good idea

--- a/src/Diamond Engine.vcxproj
+++ b/src/Diamond Engine.vcxproj
@@ -184,7 +184,6 @@
     <ClInclude Include="Source Code\CO_DirectionalLight.h" />
     <ClInclude Include="Source Code\CO_MeshRenderer.h" />
     <ClInclude Include="Source Code\CO_Material.h" />
-    <ClInclude Include="Source Code\CO_Script.h" />
     <ClInclude Include="Source Code\CO_Transform.h" />
     <ClInclude Include="Source Code\CreationTool.h" />
     <ClInclude Include="Source Code\DEJsonSupport.h" />
@@ -276,6 +275,7 @@
     <ClInclude Include="Source Code\External Libraries\PugiXML\pugiconfig.hpp" />
     <ClInclude Include="Source Code\External Libraries\PugiXML\pugixml.hpp" />
     <ClInclude Include="Source Code\GL_Object.h" />
+    <ClInclude Include="Source Code\GO_Wall.h" />
     <ClInclude Include="Source Code\IM_FileSystem.h" />
     <ClInclude Include="Source Code\GameObject.h" />
     <ClInclude Include="Source Code\glmath.h" />
@@ -327,7 +327,6 @@
     <ClCompile Include="Source Code\CO_DirectionalLight.cpp" />
     <ClCompile Include="Source Code\CO_Material.cpp" />
     <ClCompile Include="Source Code\CO_MeshRenderer.cpp" />
-    <ClCompile Include="Source Code\CO_Script.cpp" />
     <ClCompile Include="Source Code\CO_Transform.cpp" />
     <ClCompile Include="Source Code\CreationTool.cpp" />
     <ClCompile Include="Source Code\DEJsonSupport.cpp" />
@@ -383,6 +382,7 @@
     <ClCompile Include="Source Code\External Libraries\parson\parson.c" />
     <ClCompile Include="Source Code\External Libraries\PugiXML\pugixml.cpp" />
     <ClCompile Include="Source Code\GL_Object.cpp" />
+    <ClCompile Include="Source Code\GO_Wall.cpp" />
     <ClCompile Include="Source Code\IM_FileSystem.cpp" />
     <ClCompile Include="Source Code\GameObject.cpp" />
     <ClCompile Include="Source Code\glmath.cpp" />
